fix: components sticking out of the screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .main {
   position: relative;
-  width: 100vw;
+  width: 100%;
 }
 
 .main::before {
